# NotesApp

./: CMakeLists.txt  main.cpp
Domain/: Task.cpp  Task.h
Observer/: ObservableApp.cpp  ObservableApp.h  ObservableAuth.cpp  ObservableAuth.h  Observer.cpp  Observer.h  ObserverApp.cpp  ObserverApp.h  ObserverAuth.cpp  ObserverAuth.h
Presentation/: AddTaskWidget.cpp  AddTaskWidget.h  AddTaskWidget.ui  ListButton.cpp  ListButton.h  ListButton.ui  ListObject.cpp  ListObject.h  ListObject.ui  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
Presentation/AuthWidgets/: LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  RegisterWidget.cpp  RegisterWidget.h  RegisterWidget.ui
Presentation/ListModels/: MyFirstModel.cpp  MyFirstModel.h  MySecondModel.cpp  MySecondModel.h
Presentation/ListsWidgets/: ListObject.cpp  ListObject.h
Presentation/TasksWidgets/: AddTaskWidget.cpp  AddTaskWidget.h  AddTaskWidget.ui  ViewTaskWidget.cpp  ViewTaskWidget.h  ViewTaskWidget.ui
Repository/: OldRepositoryApp.cpp  OldRepositoryApp.h  RepositoryApp.cpp  RepositoryApp.h
Service/: LoginService.cpp  LoginService.h  ServiceApp.cpp  ServiceApp.h  ServiceAuth.cpp  ServiceAuth.h
